# alert_packet

./: .gitignore  COPYRIGHT  Dockerfile  README.md  README.rst  SConstruct  bin  generateFakePackets.py  pyproject.toml  schema  setup.cfg  setup.py  validateAvroNestedSchema.py
.github/workflows/: build.yaml  build.yml  build_sync_container.yml
data/: fakeAlert.avro
doc/: .gitignore  conf.py  index.rst  manifest.yaml
doc/lsst.alert.packet/: index.rst
examples/: Display Cutouts.ipynb  alert_packets_to_zooniverse.ipynb  fakes_analysis.ipynb  make_HiTS_alerts.ipynb  make_sim_sso_alerts.ipynb  send_to_zooniverse.ipynb  zooniverse_analysis.ipynb
python/lsst/alert/: __init__.py  io.py  schema.py  simulate.py  utils.py
python/lsst/alert/packet/: __init__.py  changelog.md  io.py  schema.py  schemaRegistry.py  simulate.py  updateSchema.py
python/lsst/alert/packet/schema/: alert.avdl  diasource.avdl  lsst.v4_0.diaNondetectionLimit.avsc  lsst.v4_0.diaObject.avsc  lsst.v4_0.ssObject.avsc
python/lsst/alert/packet/schema/10/0/: lsst.v10_0.alert.avsc  lsst.v10_0.diaForcedSource.avsc  lsst.v10_0.diaObject.avsc  lsst.v10_0.diaSource.avsc  lsst.v10_0.mpc_orbits.avsc  lsst.v10_0.ssObject.avsc  lsst.v10_0.ssSource.avsc
python/lsst/alert/packet/schema/10/1/: lsst.v10_1.alert.avsc  lsst.v10_1.diaForcedSource.avsc  lsst.v10_1.diaObject.avsc  lsst.v10_1.diaSource.avsc  lsst.v10_1.mpc_orbits.avsc  lsst.v10_1.ssObject.avsc  lsst.v10_1.ssSource.avsc
python/lsst/alert/packet/schema/11/0/: lsst.v11_0.alert.avsc  lsst.v11_0.diaForcedSource.avsc  lsst.v11_0.diaObject.avsc  lsst.v11_0.diaSource.avsc  lsst.v11_0.mpc_orbits.avsc  lsst.v11_0.ssObject.avsc  lsst.v11_0.ssSource.avsc
python/lsst/alert/packet/schema/2/1/: lsst.alert.diaNondetectionLimit.avsc  lsst.ssObject.avsc
python/lsst/alert/packet/schema/3/0/: lsst.alert.avsc  lsst.alert.diaSource.avsc  lsst.common.avsc  lsst.diaForcedSource.avsc  lsst.diaNondetectionLimit.avsc  lsst.diaObject.avsc  lsst.diaSource.avsc  lsst.ssObject.avsc  lsst.v3_0.alert.avsc  lsst.v3_0.diaForcedSource.avsc  lsst.v3_0.diaNondetectionLimit.avsc  lsst.v3_0.diaObject.avsc  lsst.v3_0.diaSource.avsc  lsst.v3_0.ssObject.avsc
python/lsst/alert/packet/schema/4/0/: lsst.v4_0.alert.avsc  lsst.v4_0.diaForcedSource.avsc  lsst.v4_0.diaSource.avsc
python/lsst/alert/packet/schema/5/0/: lsst.v5_0.alert.avsc  lsst.v5_0.diaForcedSource.avsc  lsst.v5_0.diaNondetectionLimit.avsc  lsst.v5_0.diaObject.avsc  lsst.v5_0.diaSource.avsc  lsst.v5_0.ssObject.avsc
python/lsst/alert/packet/schema/6/0/: lsst.v6_0.alert.avsc  lsst.v6_0.diaForcedSource.avsc  lsst.v6_0.diaNondetectionLimit.avsc  lsst.v6_0.diaObject.avsc  lsst.v6_0.diaSource.avsc  lsst.v6_0.ssObject.avsc
python/lsst/alert/packet/schema/6/1/: lsst.v6_1.alert.avsc  lsst.v6_1.diaForcedSource.avsc  lsst.v6_1.diaNondetectionLimit.avsc  lsst.v6_1.diaObject.avsc  lsst.v6_1.diaSource.avsc  lsst.v6_1.ssObject.avsc
python/lsst/alert/packet/schema/7/0/: lsst.v7_0.alert.avsc  lsst.v7_0.diaForcedSource.avsc  lsst.v7_0.diaNondetectionLimit.avsc  lsst.v7_0.diaObject.avsc  lsst.v7_0.diaSource.avsc  lsst.v7_0.ssObject.avsc
python/lsst/alert/packet/schema/7/1/: lsst.v7_1.alert.avsc  lsst.v7_1.diaForcedSource.avsc  lsst.v7_1.diaNondetectionLimit.avsc  lsst.v7_1.diaObject.avsc  lsst.v7_1.diaSource.avsc  lsst.v7_1.ssObject.avsc
python/lsst/alert/packet/schema/7/2/: lsst.v7_2.alert.avsc  lsst.v7_2.diaForcedSource.avsc  lsst.v7_2.diaNondetectionLimit.avsc  lsst.v7_2.diaObject.avsc  lsst.v7_2.diaSource.avsc  lsst.v7_2.ssObject.avsc
python/lsst/alert/packet/schema/7/3/: lsst.v7_3.alert.avsc  lsst.v7_3.diaForcedSource.avsc  lsst.v7_3.diaNondetectionLimit.avsc  (+3 more)
python/lsst/alert/packet/schema/examples/: simple.avsc  simplest.avsc
python/lsst/alert/packet/schema/sample_data/: alert.json  generate.py
schema/: alert.avsc  diasource.avsc  latest  simplest.avsc
schema/2/0/: lsst.alert.avsc
schema/2/0/sample_data/: alert.json
schema/2/1/: lsst.alert.avsc  lsst.alert.diaSource.avsc  lsst.diaObject.avsc
schema/3/0/: lsst.alert.avsc  lsst.alert.diaForcedSource.avsc  lsst.alert.diaSource.avsc  lsst.cutout.avsc  lsst.dia.cutoutRecord.avsc  lsst.dia.diaForcedSourceRecord.avsc  lsst.dia.diaNondetectionLimitRecord.avsc  lsst.dia.diaObjectRecord.avsc  lsst.dia.diaSourceRecord.avsc  lsst.dia.ssObjectRecord.avsc  lsst.diaObject.avsc  lsst.diaSource.avsc
schema/examples/sample_data/: simplest.json
script/: docker-tag.sh
test/: __init__.py  test_io.py  test_schema.py  test_schemaRegistry.py  test_schemas.py  test_setup.py.sh  test_wheel_install.sh
ups/: alert_packet.cfg  alert_packet.table  eupspkg.cfg.sh  sample-avro-alert.table
(+61 files in other folders)
