[metadata]
name = lsst-alert-packet
version = 0.2.0
description = Code for interacting with Vera C. Rubin Observatory alert packets
url = https://github.com/lsst/alert_packet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
author = Spencer Nelson
author_email = swnelson@uw.edu
license = GPLv3

[options]
install_requires =
    fastavro
    numpy
packages =
    lsst.alert.packet
    lsst.alert.packet.bin
package_dir =
    =python

[options.package_data]
lsst.alert.packet =
    schema
    schema/*
    schema/*/*
    schema/*/*/*
    schema/*/*/sample_data/*

[options.entry_points]
console_scripts =
    validateAvroRoundTrip.py = lsst.alert.packet.bin.validateAvroRoundTrip:main
    simulateAlerts.py = lsst.alert.packet.bin.simulateAlerts:main
